세대정보입력 페이지 추가

--- a/src/assets/style/color-variation.scss
+++ b/src/assets/style/color-variation.scss
@@ -1,7 +1,2 @@
-// 커러 변수
+// 컬러 변수
 $pointColor1: #002876;
-$pointColor2: #002876;
-$pointColor3: #002876;
-$pointColor4: #002876;
-$pointColor5: #002876;
-$pointColor6: #002876;
