--- a/src/assets/style/cvnet.scss
+++ b/src/assets/style/cvnet.scss
@@ -1,3 +1,4 @@
+@import url(/src/assets/style/nanumsquare.css);
 // 색싱변수
 $pointColor1: #002876;
 $color0: #000000;
@@ -9,18 +10,30 @@ $color64: #646464;
 $color70: #707070;
 $color96: #969696;
 $colorF: #ffffff;
+// 폰트 변수
+$fontFamilySet1: "NanumSquare", "Arial", sans-serif !important;
+$fontFamilySet2: "Arial", sans-serif !important;
+$fontWeightL: 300;
+$fontWeightR: 400;
+$fontWeightB: 700;
+$fontWeightEB: 800;
 // Common
 html {
 	overflow: hidden;
 	height: 100%;
 	body {
+		font-family: $fontFamilySet1;
 		font-size: 3rem;
 		overflow: hidden;
 		overflow-y: auto;
 		width: 100%;
 		height: 100%;
+		.v-application {
+			font-family: $fontFamilySet1;
+		}
 	}
 }
+
 // Default Tablet Size
 // Test Menu
 .test-quick-menu {
@@ -46,51 +59,119 @@ html {
 	}
 }
 
+// Buttons
+.v-btn {
+	.v-btn__content {
+		i {
+		}
+	}
+	&.pointColor1 {
+		color: $colorF;
+	}
+}
+// Form
+.v-input {
+	.v-label {
+		font-weight: $fontWeightB;
+		display: none;
+		&.v-label--active {
+			font-weight: $fontWeightB;
+		}
+	}
+	&.v-input--is-label-active,
+	&.v-input--is-focused {
+		.v-label {
+			display: block;
+		}
+	}
+}
+input {
+	line-height: 2;
+	max-height: 2.2813rem;
+	font-size: 1.2188rem;
+	font-weight: $fontWeightB !important;
+	&[type="password"] {
+		font-family: $fontFamilySet2;
+	}
+	&::placeholder {
+		color: $color96;
+		font-weight: $fontWeightB !important;
+	}
+}
+.v-select {
+	.v-input__icon::after {
+		display: block;
+		width: 0.625rem;
+		height: 0.625rem;
+		content: "";
+		transform: translateY(-25%) rotate(45deg);
+		border-right: 0.1875rem solid $color60;
+		border-bottom: 0.1875rem solid $color60;
+		border-radius: 0 0 0.1875rem 0;
+	}
+}
+.v-label {
+	font-size: 1.2188rem;
+	color: $color96;
+	&.v-label--active {
+		margin-top: -0.5453rem;
+		font-size: 1.0313rem;
+		color: $pointColor1;
+		& ~ input {
+			color: $color0;
+			font-size: 1.2188rem;
+			font-weight: $fontWeightB;
+		}
+	}
+}
+.v-input input {
+	max-height: none;
+}
+.v-text-field {
+	position: relative;
+	padding-top: 0;
+	.v-input__control {
+		margin-bottom: 0;
+	}
+	& ~ .form-hint {
+		position: absolute;
+		top: 100%;
+		width: 100%;
+		margin-top: 0.8056rem;
+		font-size: 0.9063rem;
+		letter-spacing: -0.0272rem;
+		display: block;
+		color: $color96;
+		.dark {
+			color: $color64;
+		}
+	}
+}
+.v-input__slot {
+	margin-bottom: 0;
+}
+.v-text-field__details {
+	position: absolute;
+	top: 100%;
+	width: 100%;
+}
 // Login
 .login-wrap {
 	width: 100vw;
 	min-height: 100vh;
-	padding-top: 4.5313rem;
+	padding-top: 3.6681rem;
 	background: url(/src/assets/images/bg-login.png) no-repeat center;
 	background-size: 200%;
-	.v-label {
-		font-size: 1.2188rem;
-		font-weight: bold;
-		color: $color96;
-		&.v-label--active {
-			margin-top: -0.5453rem;
-			font-size: 1.0313rem;
-			color: $pointColor1;
-			font-weight: bold;
-		}
-	}
-	input {
-		line-height: 2;
-		max-height: 2.2813rem;
-	}
-	.v-select {
-		.v-input__icon::after {
-			display: block;
-			width: 0.625rem;
-			height: 0.625rem;
-			content: "";
-			transform: translateY(-25%) rotate(45deg);
-			border-right: 0.1875rem solid $color60;
-			border-bottom: 0.1875rem solid $color60;
-			border-radius: 0 0 0.1875rem 0;
-		}
-		& .v-label--active {
-			& ~ .v-input__append-inner {
-				.v-input__icon::after {
-					// transform: translateY(-25%) rotate(-135deg);
-				}
-			}
-		}
-	}
+
 	.login-frame {
 		text-align: center;
 		.login-logo {
-			margin-bottom: 2.0794rem;
+			// margin-bottom: 66.5408px;
+			display: block;
+			img {
+				display: block;
+				margin: 0 auto;
+			}
 		}
 		.login-form {
 			width: 25rem;
@@ -100,30 +181,19 @@ html {
 				margin-left: -0.625rem;
 				padding: 0;
 				.col {
-					padding: 0.625rem;
+					padding: 0 0.625rem;
 				}
 			}
 			.v-text-field {
-				position: relative;
 				margin-top: 2.1875rem;
-				padding-top: 0;
-				.v-input__control {
-					margin-bottom: 0;
-				}
-			}
-			.v-text-field__details {
-				position: absolute;
-				top: 100%;
-				width: 100%;
 			}
 			.btn-login {
 				font-size: 1.2188rem;
-				font-weight: bold;
+				font-weight: $fontWeightB;
 				height: 3.125rem;
-				margin-top: 2.8125rem;
+				margin-top: 3.2697rem;
 				color: $colorF;
 				border-radius: 0.9375rem;
-				box-shadow: none;
 			}
 		}
 		.login-menu {
@@ -135,18 +205,117 @@ html {
 				margin: 0 0.4688rem;
 				width: 18.125rem;
 				height: 2.6563rem;
-				border: 1px solid $color70;
+				border: 1px solid $color70 !important;
 				border-radius: 0.9375rem;
-				box-shadow: none;
-				background-color: transparent !important;
 				font-size: 1.0313rem;
-				font-weight: bold;
+				font-weight: $fontWeightB;
 				color: $color64;
 				letter-spacing: -0.0309rem;
 				display: flex;
 				align-items: center;
 				justify-content: center;
 				text-decoration: none;
+			}
+		}
+	}
+}
+// Common Page
+.common-page {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	.common-page-top {
+		flex: 0 0 auto;
+		display: flex;
+		align-items: center;
+		.common-page-top-btns {
+			flex: 0 0 25%;
+			padding: 0 0.375rem;
+			button {
+				width: 4.125rem;
+				height: 4.125rem;
+				position: relative;
+				display: block;
+				padding: 0;
+				i.icon-history-back {
+					width: 4.125rem;
+					height: 4.125rem;
+					display: block;
+					&::after {
+						display: block;
+						width: 100%;
+						height: 100%;
+						background: url(/src/assets/images/ic_back.svg) no-repeat center;
+						background-size: 50%;
+						opacity: 1;
+						transform: scale(1);
+					}
+				}
+			}
+		}
+		h1 {
+			flex: 1 1 auto;
+			text-align: center;
+			font-size: 1.625rem;
+			color: $color0;
+			font-weight: $fontWeightEB;
+		}
+	}
+	.common-page-content {
+		flex: 1 1 auto;
+		display: flex;
+	}
+	.common-page-bottom {
+		flex: 0 0 auto;
+	}
+	.common-page-form {
+		padding-top: 5.4688rem;
+		width: 25rem;
+		margin: 0 auto;
+		min-height: 100%;
+		display: flex;
+		.row {
+			margin: 0;
+			.col {
+				padding: 0;
+			}
+		}
+		.v-form {
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+			.form-wrap {
+				flex: 1 1 auto;
+			}
+		}
+		.common-page-form-btn {
+			margin: 20px 0;
+			.v-btn {
+				border: 1px solid $color70 !important;
+				border-radius: 0.9375rem;
+				height: 3.125rem;
+				font-size: 1.2188rem;
+				font-weight: $fontWeightB;
+				letter-spacing: -0.0366rem;
+				&.pointColor1 {
+					border: none !important;
+				}
+				& ~ .v-btn {
+					margin-top: 0.9375rem;
+				}
+			}
+		}
+		.row {
+			& ~ .row {
+				margin-top: 4.6875rem;
+			}
+			.col {
+				position: relative;
+			}
+		}
+		.v-input {
+			margin-top: 0;
+			& ~ .v-input {
 			}
 		}
 	}
