--- a/src/assets/style/cvnet.scss
+++ b/src/assets/style/cvnet.scss
@@ -1,6 +1,9 @@
 @import url(/src/assets/style/nanumsquare.css);
 // 색싱변수
 $pointColor1: #002876;
+$pointColor2: #262f53;
+$successColor: #4a65fe;
+$failColor: #ff7e8d;
 $color0: #000000;
 $color0_05: #0000000d;
 $color0_10: rgba(0, 0, 0, 0.1);
@@ -9,6 +12,7 @@ $color60: #606060;
 $color64: #646464;
 $color70: #707070;
 $color96: #969696;
+$colorD2: #d2d2d2;
 $colorF: #ffffff;
 // 폰트 변수
 $fontFamilySet1: "NanumSquare", "Arial", sans-serif !important;
@@ -61,6 +65,8 @@ html {
 
 // Buttons
 .v-btn {
+	border-radius: 0.9375rem;
+	overflow: hidden;
 	.v-btn__content {
 		i {
 		}
@@ -86,16 +92,16 @@ html {
 	}
 }
 input {
-	line-height: 2;
-	max-height: 2.2813rem;
 	font-size: 1.2188rem;
 	font-weight: $fontWeightB !important;
+	line-height: 2;
+	max-height: 2.2813rem;
 	&[type="password"] {
 		font-family: $fontFamilySet2;
 	}
 	&::placeholder {
-		color: $color96;
 		font-weight: $fontWeightB !important;
+		color: $color96;
 	}
 }
 .v-select {
@@ -114,13 +120,13 @@ input {
 	font-size: 1.2188rem;
 	color: $color96;
 	&.v-label--active {
-		margin-top: -0.5453rem;
 		font-size: 1.0313rem;
+		margin-top: -0.5453rem;
 		color: $pointColor1;
 		& ~ input {
-			color: $color0;
 			font-size: 1.2188rem;
 			font-weight: $fontWeightB;
+			color: $color0;
 		}
 	}
 }
@@ -133,18 +139,19 @@ input {
 	.v-input__control {
 		margin-bottom: 0;
 	}
-	& ~ .form-hint {
-		position: absolute;
-		top: 100%;
-		width: 100%;
-		margin-top: 0.8056rem;
-		font-size: 0.9063rem;
-		letter-spacing: -0.0272rem;
-		display: block;
-		color: $color96;
-		.dark {
-			color: $color64;
-		}
+}
+.form-group ~ .form-hint,
+.v-text-field ~ .form-hint {
+	font-size: 0.9063rem;
+	position: absolute;
+	top: 100%;
+	display: block;
+	width: 100%;
+	margin-top: 0.8056rem;
+	letter-spacing: -0.0272rem;
+	color: $color96;
+	.dark {
+		color: $color64;
 	}
 }
 .v-input__slot {
@@ -193,7 +200,6 @@ input {
 				height: 3.125rem;
 				margin-top: 3.2697rem;
 				color: $colorF;
-				border-radius: 0.9375rem;
 			}
 		}
 		.login-menu {
@@ -202,78 +208,109 @@ input {
 			justify-content: center;
 			margin-top: 3.2813rem;
 			.btn-login-menu {
-				margin: 0 0.4688rem;
-				width: 18.125rem;
-				height: 2.6563rem;
-				border: 1px solid $color70 !important;
-				border-radius: 0.9375rem;
 				font-size: 1.0313rem;
 				font-weight: $fontWeightB;
-				color: $color64;
-				letter-spacing: -0.0309rem;
 				display: flex;
 				align-items: center;
 				justify-content: center;
+				width: 18.125rem;
+				height: 2.6563rem;
+				margin: 0 0.4688rem;
 				text-decoration: none;
+				letter-spacing: -0.0309rem;
+				color: $color64;
+				border: 1px solid $color70 !important;
 			}
 		}
 	}
 }
 // Common Page
 .common-page {
-	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
+	height: 100vh;
 	.common-page-top {
-		flex: 0 0 auto;
 		display: flex;
 		align-items: center;
+		flex: 0 0 auto;
 		.common-page-top-btns {
 			flex: 0 0 25%;
 			padding: 0 0.375rem;
 			button {
-				width: 4.125rem;
-				height: 4.125rem;
 				position: relative;
 				display: block;
+				width: 4.125rem;
+				height: 4.125rem;
 				padding: 0;
 				i.icon-history-back {
+					display: block;
 					width: 4.125rem;
 					height: 4.125rem;
-					display: block;
 					&::after {
 						display: block;
 						width: 100%;
 						height: 100%;
+						transform: scale(1);
+						opacity: 1;
 						background: url(/src/assets/images/ic_back.svg) no-repeat center;
 						background-size: 50%;
-						opacity: 1;
-						transform: scale(1);
 					}
 				}
 			}
 		}
 		h1 {
+			font-size: 1.625rem;
+			font-weight: $fontWeightEB;
 			flex: 1 1 auto;
 			text-align: center;
-			font-size: 1.625rem;
 			color: $color0;
-			font-weight: $fontWeightEB;
 		}
 	}
 	.common-page-content {
-		flex: 1 1 auto;
 		display: flex;
+		flex: 1 1 auto;
+		&.terms-content {
+			display: block;
+			overflow-y: auto;
+			padding: 2.3438rem 5.125rem;
+			.terms-wrap {
+				font-size: 1.0313rem;
+				line-height: 1.875rem;
+			}
+			& ~ .common-page-bottom {
+				box-shadow: 0px -6px 10px $color0_10;
+			}
+		}
 	}
 	.common-page-bottom {
 		flex: 0 0 auto;
+		// display: flex;
+		padding: 0.9375rem;
+		text-align: center;
+		.v-btn {
+			font-size: 1.2188rem;
+			font-weight: $fontWeightB;
+			width: 25rem;
+			height: 3.125rem;
+			margin: 0 auto;
+			color: $color32;
+			border: 1px solid $color70;
+			display: flex;
+			background-color: transparent;
+			&::before {
+				background-color: transparent;
+			}
+			& ~ .v-btn {
+				margin-top: 0.9375rem;
+			}
+		}
 	}
 	.common-page-form {
-		padding-top: 5.4688rem;
-		width: 25rem;
-		margin: 0 auto;
-		min-height: 100%;
 		display: flex;
+		width: 25rem;
+		min-height: 100%;
+		margin: 0 auto;
+		padding-top: 4.6875rem;
 		.row {
 			margin: 0;
 			.col {
@@ -286,17 +323,67 @@ input {
 			width: 100%;
 			.form-wrap {
 				flex: 1 1 auto;
+				.form-group {
+					display: flex;
+					align-items: flex-end;
+					height: 40px;
+					.form-btn {
+						font-size: 1.0313rem;
+						font-weight: $fontWeightB;
+						height: 3.125rem;
+						color: $color32;
+						border: 1px solid $color32;
+					}
+					.v-input ~ .form-btn {
+						margin-left: 1.875rem;
+					}
+				}
+			}
+			.btn-form-agree {
+				font-size: 1.2188rem;
+				height: 3.125rem;
+				margin-top: 4.3681rem;
+				color: $color32;
+				border: 1px solid $color70;
+				.v-btn__content {
+					justify-content: flex-start;
+					text-align: left;
+				}
+				.v-icon {
+					width: 1.5625rem;
+					height: 1.5625rem;
+					margin-right: 0.9063rem;
+					border-radius: 50%;
+					background-color: $colorD2;
+				}
+				&.complete {
+					.v-icon {
+						background-color: $pointColor2;
+						&::after {
+							width: 0.6563rem;
+							height: 0.4063rem;
+							transform: translateY(-25%) rotate(-45deg);
+							opacity: 1;
+							border-bottom: 0.1563rem solid $colorF;
+							border-left: 0.1563rem solid $colorF;
+							border-radius: 0;
+							background-color: transparent;
+						}
+					}
+				}
+				& ~ .btn-form-agree {
+					margin-top: 0.9375rem;
+				}
 			}
 		}
 		.common-page-form-btn {
 			margin: 20px 0;
 			.v-btn {
-				border: 1px solid $color70 !important;
-				border-radius: 0.9375rem;
-				height: 3.125rem;
 				font-size: 1.2188rem;
 				font-weight: $fontWeightB;
+				height: 3.125rem;
 				letter-spacing: -0.0366rem;
+				border: 1px solid $color70 !important;
 				&.pointColor1 {
 					border: none !important;
 				}
@@ -316,6 +403,63 @@ input {
 		.v-input {
 			margin-top: 0;
 			& ~ .v-input {
+			}
+		}
+	}
+	.common-page-result-message {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+		margin: 0 auto;
+		padding-top: 5.3125rem;
+		font-size: 1.6875rem;
+		color: $color32;
+		font-weight: $fontWeightEB;
+		.v-icon {
+			width: 10.1875rem;
+			height: 10.1875rem;
+			margin: 0 auto 3.3125rem;
+			border-radius: 50%;
+			display: flex;
+			&::after {
+				opacity: 1;
+				transform: scale(1);
+				background-color: transparent;
+			}
+			&.icon-success {
+				background-color: $successColor;
+				&::after {
+					width: 4.5625rem;
+					height: 2.75rem;
+					border-left: 0.9375rem solid $colorF;
+					border-bottom: 0.9375rem solid $colorF;
+					border-radius: 0;
+					transform: translateY(-25%) rotate(-45deg);
+				}
+			}
+			&.icon-fail {
+				background-color: $failColor;
+				&::before,
+				&::after {
+					content: "";
+					position: absolute;
+					display: block;
+					top: 50%;
+					left: 50%;
+					background-color: $colorF;
+					border-radius: 0;
+					width: 5rem;
+					height: 0.9375rem;
+					transform-origin: center;
+				}
+				&::before {
+					transform: translate(-50%, -50%) rotate(45deg);
+				}
+				&::after {
+					transform: translate(-50%, -50%) rotate(-45deg);
+				}
 			}
 		}
 	}
