--- a/src/assets/style/cvnet.scss
+++ b/src/assets/style/cvnet.scss
@@ -12,6 +12,7 @@ $color60: #606060;
 $color64: #646464;
 $color70: #707070;
 $color96: #969696;
+$colorC8: #c8c8c8;
 $colorD2: #d2d2d2;
 $colorF: #ffffff;
 // 폰트 변수
@@ -65,8 +66,8 @@ html {
 
 // Buttons
 .v-btn {
-	border-radius: 0.9375rem;
 	overflow: hidden;
+	border-radius: 0.9375rem;
 	.v-btn__content {
 		i {
 		}
@@ -290,12 +291,12 @@ input {
 		.v-btn {
 			font-size: 1.2188rem;
 			font-weight: $fontWeightB;
+			display: flex;
 			width: 25rem;
 			height: 3.125rem;
 			margin: 0 auto;
 			color: $color32;
 			border: 1px solid $color70;
-			display: flex;
 			background-color: transparent;
 			&::before {
 				background-color: transparent;
@@ -407,25 +408,25 @@ input {
 		}
 	}
 	.common-page-result-message {
+		font-size: 1.6875rem;
+		font-weight: $fontWeightEB;
 		display: flex;
-		flex-direction: column;
 		align-items: center;
+		flex-direction: column;
 		justify-content: center;
-		text-align: center;
 		margin: 0 auto;
 		padding-top: 5.3125rem;
-		font-size: 1.6875rem;
+		text-align: center;
 		color: $color32;
-		font-weight: $fontWeightEB;
 		.v-icon {
+			display: flex;
 			width: 10.1875rem;
 			height: 10.1875rem;
 			margin: 0 auto 3.3125rem;
 			border-radius: 50%;
-			display: flex;
 			&::after {
-				opacity: 1;
 				transform: scale(1);
+				opacity: 1;
 				background-color: transparent;
 			}
 			&.icon-success {
@@ -433,32 +434,122 @@ input {
 				&::after {
 					width: 4.5625rem;
 					height: 2.75rem;
-					border-left: 0.9375rem solid $colorF;
-					border-bottom: 0.9375rem solid $colorF;
-					border-radius: 0;
 					transform: translateY(-25%) rotate(-45deg);
+					border-bottom: 0.9375rem solid $colorF;
+					border-left: 0.9375rem solid $colorF;
+					border-radius: 0;
 				}
 			}
 			&.icon-fail {
 				background-color: $failColor;
 				&::before,
 				&::after {
-					content: "";
 					position: absolute;
-					display: block;
 					top: 50%;
 					left: 50%;
-					background-color: $colorF;
-					border-radius: 0;
+					display: block;
 					width: 5rem;
 					height: 0.9375rem;
+					content: "";
 					transform-origin: center;
+					border-radius: 0;
+					background-color: $colorF;
 				}
 				&::before {
 					transform: translate(-50%, -50%) rotate(45deg);
 				}
 				&::after {
 					transform: translate(-50%, -50%) rotate(-45deg);
+				}
+			}
+		}
+	}
+	.find-idpass-wrap {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		justify-content: center;
+		margin: 0 auto;
+		.btn-find-idpass {
+			font-size: 1.625rem;
+			font-weight: $fontWeightEB;
+			width: 12.5rem;
+			height: 12.5rem;
+			border: 1px solid $color96 !important;
+			border-radius: 1.875rem;
+			background-color: $colorF;
+			box-shadow: 0.375rem 0.375rem 0.75rem $color0_10;
+			& ~ .btn-find-idpass {
+				margin-top: 1.25rem;
+			}
+		}
+	}
+	.common-page-list {
+		width: 25rem;
+		margin: 0 auto;
+		.v-list {
+			&--tile {
+			}
+			&--disabled {
+			}
+			.v-item-group {
+				.v-list-item {
+					border-bottom: 1px solid $colorC8;
+					&--link {
+					}
+					&__content {
+						padding: 1.5625rem;
+						margin-left: -1.5625rem;
+						margin-right: -1.5625rem;
+					}
+					.v-list-item__title {
+						font-size: 1.3125rem;
+						font-weight: $fontWeightB;
+					}
+				}
+			}
+		}
+	}
+}
+.v-overlay {
+	backdrop-filter: blur(0.9375rem);
+	-webkit-backdrop-filter: blur(0.9375rem);
+	.v-overlay__scrim {
+		backdrop-filter: blur(1.5625rem);
+		-webkit-backdrop-filter: blur(1.5625rem);
+	}
+}
+.v-dialog {
+	border-radius: 1.875rem;
+	box-shadow: none;
+	.v-card {
+		&__title {
+			font-size: 1.625rem !important;
+			font-weight: $fontWeightEB !important;
+			justify-content: center;
+			padding: 1.875rem !important;
+			text-align: center;
+		}
+		&__text {
+			font-size: 1.2188rem;
+			line-height: 1.875rem;
+			padding: 0 1.875rem 1.875rem !important;
+			text-align: center;
+			color: $color0 !important;
+			strong {
+				font-weight: $fontWeightB;
+			}
+		}
+		&__actions {
+			justify-content: center;
+			padding: 1.25rem;
+			text-align: center;
+			.v-btn {
+				font-size: 1.2188rem;
+				font-weight: $fontWeightB;
+				height: auto;
+				&.btn-confirm {
+					color: $successColor;
 				}
 			}
 		}
