--- a/src/assets/style/cvnet.scss
+++ b/src/assets/style/cvnet.scss
@@ -15,6 +15,10 @@ $color96: #969696;
 $colorC8: #c8c8c8;
 $colorD2: #d2d2d2;
 $colorF: #ffffff;
+$colorF_25: rgba(255, 255, 255, 0.25);
+$colorModeHome: #0bc071;
+$colorModeGoOut: #f76c63;
+$bgModeSleep: transparent linear-gradient(180deg, #2d2d2d 0%, #4b4b4b 100%) 0% 0% no-repeat padding-box;
 // 폰트 변수
 $fontFamilySet1: "NanumSquare", "Arial", sans-serif !important;
 $fontFamilySet2: "Arial", sans-serif !important;
@@ -174,10 +178,15 @@ input {
 	.login-frame {
 		text-align: center;
 		.login-logo {
-			// margin-bottom: 66.5408px;
 			display: block;
+			// margin-bottom: 66.5408px;
+			width: 14.6875rem;
+			height: 14.6875rem;
+			margin: 0 auto;
 			img {
 				display: block;
+				max-width: 100%;
+				max-height: 100%;
 				margin: 0 auto;
 			}
 		}
@@ -221,6 +230,274 @@ input {
 				letter-spacing: -0.0309rem;
 				color: $color64;
 				border: 1px solid $color70 !important;
+			}
+		}
+	}
+}
+// Main Page
+.main-page {
+	display: flex;
+	flex-direction: column;
+	width: 100vw;
+	height: 100vh;
+	background: transparent linear-gradient(90deg, #363243 0%, #343041 100%) 0% 0% no-repeat padding-box;
+	&::before {
+		position: fixed;
+		// filter: blur(30px);
+		z-index: 0;
+		// width: 100%;
+		// height: 100%;
+		top: 50%;
+		left: 50%;
+		display: block;
+		width: 42.4688rem;
+		height: 25.4375rem;
+		content: "";
+		transform: translate(-50%, -50%) scale(1.3);
+		transform-origin: center;
+		opacity: 1;
+		background: transparent url("/src/assets/images/bg-main.png") 0% 0% no-repeat;
+		background-size: contain;
+	}
+	.main-page-top {
+		position: relative;
+		display: flex;
+		height: 4.375rem;
+		.main-page-top-actions {
+			flex: 1 1 auto;
+			padding: 0 0.8125rem;
+			.btn-room-status {
+				font-size: 1.0938rem;
+				min-width: 9.375rem;
+				height: 2.3438rem;
+				padding: 0 0.3125rem;
+				color: $colorF;
+				border-radius: 0.9375rem;
+				background-color: $colorF_25 !important;
+				.v-image {
+					width: 1.875rem;
+					height: 1.875rem;
+					margin-right: 0.79rem;
+					border-radius: 0.5rem;
+					&.icon-goout {
+						background-color: $colorModeGoOut;
+					}
+					&.icon-home {
+						background-color: $colorModeHome;
+					}
+					&.icon-sleep {
+						background: $bgModeSleep;
+					}
+				}
+				&--contained {
+				}
+				&__content {
+				}
+				.v-icon.notranslate.icon-outing.material-icons.theme--light {
+				}
+				.v-icon.notranslate.icon-occupancy.material-icons.theme--light {
+				}
+				.v-icon.notranslate.icon-sleep.material-icons.theme--light {
+				}
+				&:hover {
+				}
+				&:active {
+				}
+				&:focus {
+				}
+			}
+		}
+		.main-page-top-logo {
+			flex: 0 0 auto;
+			padding: 0 1.625rem;
+			h1 {
+				position: relative;
+				width: 8.4375rem;
+				height: 4.375rem;
+				img,
+				.v-image {
+					display: block;
+					max-height: 100%;
+				}
+			}
+		}
+	}
+
+	.main-page-content {
+		position: relative;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		padding-top: 4.875rem;
+		flex: 1 1 auto;
+		.weather-section {
+			line-height: 1;
+			display: flex;
+			align-items: center;
+			height: 7.1875rem;
+			margin: 0 auto;
+			margin-bottom: 3.6319rem;
+			padding: 0;
+			color: $colorF;
+			.today {
+				display: flex;
+				flex: 1 1 50%;
+				justify-content: flex-end;
+				h3 {
+					font-size: 1.0313rem;
+					font-weight: $fontWeightR;
+					margin-bottom: 0.8822rem;
+					color: $colorD2;
+				}
+				div {
+					display: flex;
+					align-items: center;
+				}
+				.today-temp {
+					display: flex;
+					align-items: flex-end;
+					flex-direction: column;
+					.high {
+						font-size: 2.5625rem;
+						height: 2.8125rem;
+						.unit {
+							// font-size: 1.6875rem;
+							margin-left: -0.25em;
+						}
+					}
+					.low {
+						font-size: 1.625rem;
+						height: 1.7813rem;
+						margin-top: 0.5869rem;
+						color: $colorC8;
+						.unit {
+							margin-left: -0.25em;
+						}
+					}
+				}
+				.today-dust {
+					display: flex;
+					align-items: flex-end;
+					flex-direction: column;
+					margin-left: 2.3438rem;
+					.status {
+						font-size: 1.875rem;
+						font-weight: $fontWeightB;
+						height: 2.8125rem;
+					}
+					.value {
+						font-size: 1.625rem;
+						height: 1.7813rem;
+						margin-top: 0.5869rem;
+						color: $colorC8;
+						.unit {
+							font-size: 1.2188rem;
+						}
+					}
+				}
+			}
+			.weather-icon {
+				display: flex;
+				align-items: center;
+				flex: 0 0 15.625rem;
+				.v-image {
+				}
+			}
+			.now {
+				flex: 1 1 50%;
+				.now-temp {
+					display: flex;
+					flex-direction: column;
+					.value {
+						font-size: 5.2813rem;
+						font-weight: $fontWeightL;
+						line-height: 5.8438rem;
+						.unit {
+							margin-left: -0.25em;
+						}
+					}
+					.text {
+						font-size: 1.875rem;
+						font-weight: $fontWeightR;
+					}
+				}
+			}
+		}
+		.main-menu-section {
+			flex: 1 1 auto;
+			padding: 0;
+			width: 54.375rem;
+			.main-menu-slide-wrapper {
+				height: 100%;
+				display: flex;
+			}
+			.swiper-container {
+				display: flex;
+				flex-direction: column;
+				position: relative;
+				.swiper-pagination {
+					position: relative;
+					order: 0;
+					top: 0;
+					bottom: auto;
+					height: auto;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					.swiper-pagination-bullet {
+						display: block;
+						background-color: $colorF;
+						width: 0.5625rem;
+						height: 0.5625rem;
+						opacity: 0.2;
+						&.swiper-pagination-bullet-active {
+							opacity: 0.5;
+						}
+					}
+				}
+				.swiper-wrapper {
+					order: 1;
+				}
+				.swiper-pagination.swiper-pagination-bullets {
+				}
+				.swiper-notification {
+				}
+				.swiper-slide.swiper-slide-active {
+				}
+				.swiper-slide.swiper-slide-next {
+				}
+				.swiper-pagination-bullet.swiper-pagination-bullet-active {
+				}
+			}
+		}
+		.btn-setting {
+			position: fixed;
+			z-index: 9;
+			top: 5.625rem;
+			right: 0.625rem;
+			width: 3.75rem;
+			height: 3.75rem;
+			.icon-setting {
+				width: 49px;
+				height: 51px;
+				&::after {
+					transform: scale(1);
+					opacity: 1;
+					background: url(/src/assets/images/ic_setting_white.svg) no-repeat center;
+					background-size: contain;
+				}
+			}
+			&--contained {
+			}
+			&__content {
+				.v-icon.notranslate.icon-setting.material-icons.theme--light {
+				}
+			}
+			&:hover {
+			}
+			&:active {
+			}
+			&:focus {
 			}
 		}
 	}
@@ -498,9 +775,9 @@ input {
 					&--link {
 					}
 					&__content {
-						padding: 1.5625rem;
-						margin-left: -1.5625rem;
 						margin-right: -1.5625rem;
+						margin-left: -1.5625rem;
+						padding: 1.5625rem;
 					}
 					.v-list-item__title {
 						font-size: 1.3125rem;
